[DEV][12.05] Support day offset in end time

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -60,6 +60,8 @@
 
     <string name="default_currency">€</string>
 
+    <string name="simple_day_offset_format">%1$s (T+%2$d)</string>
+
     <string name="simple_hour_format">HH:mm:ss</string>
     <string name="simple_hour_reduced_format">HH:mm</string>
     <string name="simple_date_format">@string/simple_date_format_24</string>
