--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -53,6 +53,8 @@
     <string name="render3d">Prestar 3D</string>
     <string name="manage">Gestionar</string>
     <string name="password">Contraseña</string>
+    <string name="copy">Copiar</string>
+    <string name="copied_to_clipboard">Copiado al portapapeles</string>
 
     <string name="heated_bed">Cama calentada</string>
     <string name="heated_head">Extrusor calentado %d</string>
