--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -53,6 +53,8 @@
     <string name="render3d">Rendu 3D</string>
     <string name="manage">Gérer</string>
     <string name="password">Mot de passe</string>
+    <string name="copy">Copier</string>
+    <string name="copied_to_clipboard">Copié dans le presse-papier</string>
 
     <string name="heated_bed">Lit chauffant</string>
     <string name="heated_head">Tête chauffante %d</string>
