--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -53,6 +53,8 @@
     <string name="render3d">Geven 3D</string>
     <string name="manage">Beheren</string>
     <string name="password">Wachtwoord</string>
+    <string name="copy">Kopiëren</string>
+    <string name="copied_to_clipboard">Gekopieerd naar het klembord</string>
 
     <string name="heated_bed">Bed</string>
     <string name="heated_head">Kop %d</string>
