--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -53,6 +53,8 @@
     <string name="render3d">Oказывать 3D</string>
     <string name="manage">Yправлять</string>
     <string name="password">Пароль</string>
+    <string name="copy">Kопировать</string>
+    <string name="copied_to_clipboard">Скопировано в буфер обмена</string>
 
     <string name="heated_bed">Стол</string>
     <string name="heated_head">Хотэнд %d</string>
