[DEV][13.01] Integrate new printer connected dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="terminate">Terminate</string>
     <string name="search">Search</string>
     <string name="retry">Retry</string>
-    <string name="set_home">XYZ home</string>
+    <string name="set_home">Home XYZ</string>
     <string name="backup">Backup</string>
     <string name="restore">Restore</string>
     <string name="start">Start</string>
