--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -55,6 +55,7 @@
     <string name="password">Contraseña</string>
     <string name="copy">Copiar</string>
     <string name="copied_to_clipboard">Copiado al portapapeles</string>
+    <string name="never_ask_again">Nunca preguntes de nuevo</string>
 
     <string name="heated_bed">Cama calentada</string>
     <string name="heated_head">Extrusor calentado %d</string>
