--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -55,6 +55,7 @@
     <string name="password">Password</string>
     <string name="copy">Copiare</string>
     <string name="copied_to_clipboard">Copiato negli appunti</string>
+    <string name="never_ask_again">Non chiedere mai più</string>
 
     <string name="heated_bed">Heated bed</string>
     <string name="heated_head">Heated head %d</string>
