--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -55,6 +55,7 @@
     <string name="password">Wachtwoord</string>
     <string name="copy">Kopiëren</string>
     <string name="copied_to_clipboard">Gekopieerd naar het klembord</string>
+    <string name="never_ask_again">Nooit meer vragen</string>
 
     <string name="heated_bed">Bed</string>
     <string name="heated_head">Kop %d</string>
