--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -55,6 +55,7 @@
     <string name="password">Пароль</string>
     <string name="copy">Kопировать</string>
     <string name="copied_to_clipboard">Скопировано в буфер обмена</string>
+    <string name="never_ask_again">Никогда не спрашивать</string>
 
     <string name="heated_bed">Стол</string>
     <string name="heated_head">Хотэнд %d</string>
