[DEV] Set "search" label to "Search in files..."

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -14,7 +14,7 @@
     <string name="quit">Beenden</string>
     <string name="terminate">Abbrechen</string>
     <string name="improve">Verbessern</string>
-    <string name="search">Suchen</string>
+    <string name="search">In Dateien suchen…</string>
     <string name="retry">wiederholen</string>
     <string name="set_home">XYZ Home</string>
     <string name="backup">Sichern</string>
