--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -14,7 +14,7 @@
     <string name="quit">Quitter</string>
     <string name="terminate">Terminer</string>
     <string name="improve">Améliorer</string>
-    <string name="search">Rechercher</string>
+    <string name="search">Rechercher dans les fichiers…</string>
     <string name="retry">Réessayer</string>
     <string name="set_home">Initialisation XYZ</string>
     <string name="backup">Sauver</string>
