--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -13,7 +13,7 @@
     <string name="previous">Precedente</string>
     <string name="quit">Abbandona</string>
     <string name="terminate">Termina</string>
-    <string name="search">Cerca</string>
+    <string name="search">Cerca nei file…</string>
     <string name="retry">Riprova</string>
     <string name="set_home">XYZ home</string>
     <string name="backup">Backup</string>
