--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -13,7 +13,7 @@
     <string name="previous">Voorgaand</string>
     <string name="quit">Afbreken</string>
     <string name="terminate">Beeindigen</string>
-    <string name="search">Zoeken</string>
+    <string name="search">Zoeken in bestanden…</string>
     <string name="improve">Verbeteren</string>
     <string name="retry">Opnieuw</string>
     <string name="set_home">Initialisatie XYZ</string>
