--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -13,7 +13,7 @@
     <string name="previous">Anterior</string>
     <string name="quit">Sair</string>
     <string name="terminate">Terminar</string>
-    <string name="search">Buscar</string>
+    <string name="search">Pesquisar nos arquivos…</string>
     <string name="retry">Tentar novamente</string>
     <string name="set_home">Home XYZ</string>
     <string name="backup">Backup</string>
