--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -14,7 +14,7 @@
     <string name="quit">Выход</string>
     <string name="terminate">Прервать</string>
     <string name="improve">Улучшить</string>
-    <string name="search">Поиск</string>
+    <string name="search">Поиск в файлах…</string>
     <string name="retry">Повтор</string>
     <string name="set_home">Домой XYZ</string>
     <string name="backup">Сохранить</string>
