[DEV] Integrate heated chamber in temperature fragment

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -57,8 +57,9 @@
     <string name="copied_to_clipboard">In die Zwischenablage kopiert</string>
     <string name="never_ask_again">Frag nie wieder</string>
 
-    <string name="heated_bed">Beheiztes Bett</string>
-    <string name="heated_head">Beheizter Kopf %d</string>
+    <string name="heated_bed">Beheizte Bett</string>
+    <string name="heated_chamber">Beheizte Kammer</string>
+    <string name="heated_head">Beheizte Kopf %d</string>
     <string name="extruder">Extruder %d</string>
 
     <string name="default_currency">€</string>
