--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -58,6 +58,7 @@
     <string name="never_ask_again">Никогда не спрашивать</string>
 
     <string name="heated_bed">Стол</string>
+    <string name="heated_chamber">Подогреваемая камера</string>
     <string name="heated_head">Хотэнд %d</string>
     <string name="extruder">Экструдер %d</string>
 
