--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
     <string name="google_drive" translatable="false">Drive</string>
 
     <string name="heated_bed">Heated bed</string>
+    <string name="heated_chamber">Heated chamber</string>
     <string name="heated_head">Heated head %d</string>
     <string name="extruder">Extruder %d</string>
 
